@@ -24,7 +24,12 @@ import java.util.List;
 @RequiredArgsConstructor
 public class ModelUtils {
 
+    @Getter
     private final PCModuleTestEnv module;
+
+    public ModelUtils() {
+        this(new PCModuleTestEnv());
+    }
 
     public WorkContainer<String, String> createWorkFor(long offset) {
         ConsumerRecord<String, String> mockCr = Mockito.mock(ConsumerRecord.class);
